infrastructure/controllers/airflow.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    toolkit.fluxcd.io/tenant: sre-team
