infrastructure/controllers/apache.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apache
  labels:
    toolkit.fluxcd.io/tenant: dev-team
