infrastructure/controllers/ingress-podinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
  name: podinfo
  namespace: podinfo
spec:
  tls:
  - hosts:
      - k8s.aws.eqe.io
    secretName: wildcard-tls-cert
  rules:
  - host: k8s.aws.eqe.io
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: podinfo
            port: 
              number: 9898
  # - host: k8s.aws.eqe.io
  #   http:
  #     paths:
  #     - path: /podinfo
  #       pathType: Exact
  #       backend:
  #         service:
  #           name: podinfo
  #           port: 
  #             number: 9898
